--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- Preconnect and prefetch -->
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="noopener" href="https://fonts.gstatic.com/" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
-    <link rel="preconnect" href="https://kitsu.io/" crossorigin />
+    <link rel="noopener" href="https://kitsu.io/" crossorigin />
     <link rel="dns-prefetch" href="https://kitsu.io/" />
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Muli&display=block"
+      href="https://fonts.googleapis.com/css?family=Muli&display=swap"
       rel="stylesheet"
     />
     <!-- Styles -->
@@ -24,13 +27,19 @@
     />
     <!-- Scripts -->
     <script async src="https://unpkg.com/unfetch/polyfill"></script>
-    <script async src="dist/bundle.js"></script>
+    <script async src="dist/vendors~main.bundle.js"></script>
+    <script async src="dist/main.bundle.js"></script>
+    <meta name="description" content="The beast videos to you" />
     <!-- Title -->
     <title>PlatziVideo</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <img
+        class="logo"
+        src="/assets/logo-platzi-video.png"
+        alt="PlatziVideos"
+      />
       <div class="menu">
         <div>
           <img src="assets/user-icon.png" alt="" />
@@ -42,10 +51,15 @@
       </div>
     </header>
 
-    <section class="main">
+    <label for="search" class="main">
       <h2>¿Qué quieres ver hoy?</h2>
-      <input type="text" class="search-input" placeholder="Buscar..." />
-    </section>
+      <input
+        type="text"
+        id="search"
+        class="search-input"
+        placeholder="Buscar..."
+      />
+    </label>
 
     <footer>
       <p>
